name:                volbar
version:             0.1.0.0
synopsis:            xmonad volume bar
description:         Please see README.md
homepage:            https://github.com/apeyroux/volbar#readme
license:             BSD3
license-file:        LICENSE
author:              Alexandre Peyroux
maintainer:          alex@xn--wxa.email
copyright:           2017 Alexandre Peyroux
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable volbar
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , alsa-mixer
